2005-04-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-content-start),
	(shimbun-yomiuri-content-end): Improve.
	(initialize-instance): Make the from address unreachable.
	(shimbun-yomiuri-get-headers): Ditto.
	(shimbun-yomiuri-prepare-article): Remove images and garbage in
	the beginning of articles when the server is not yomiuri-html;
	make articles in the kyoiku group contain the footers; remove
	garbage more; remove height="nn" in image tags; replace
	alt="whitespace" with alt="image".

	* shimbun/sb-yomiuri-html.el (shimbun-yomiuri-html-content-start),
	(shimbun-yomiuri-html-content-end): Improve.

2005-04-16  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-arch-bluegate.el: Re-Add for site re-opening.

2005-04-15  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/sb-palmfan.el (shimbun-palmfan-x-face-alist): New
	variable. Tnx, Maruyama san.

2005-04-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-decode-time): New function.

	* shimbun/sb-asahi-mytown.el (shimbun-asahi-mytown-get-headers):
	Use it.

	* shimbun/sb-asahi.el (shimbun-asahi-get-headers): Use it.

	* shimbun/sb-sankei.el (shimbun-get-headers): Use it.
	(shimbun-sankei-get-headers-editoria: Use it.

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-get-headers): Use it.

	* w3m.el (w3m-decode-buffer): Decode "\240" into "&nbsp;".

2005-04-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el (shimbun-sankei-x-face-alist): Renew.
	(shimbun-sankei-get-headers-editoria): Extend the time slot in
	which to presume the url.

2005-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el (shimbun-sankei-get-headers-editoria):
	Presume the url for that day.

2005-04-11  David Hansen  <david.hansen@physik.fu-berlin.de>

	* shimbun/sb-the-register.el (shimbun-get-headers): Follow their
	wicked URL and redirect changes.

2005-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el (shimbun-sankei-from-address): Make it